--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>El amigo Reservtion Form</title>
+    <title>El amigo Reservation Form</title>
   </head>
   <body>
     <div id="container">
@@ -23,9 +23,19 @@
         <p>Get your spot before somebody else does!</p>
         <form action="get">
           <label for="name">Your Name</label>
-          <input type="text" name="name" id="name" placeholder="Jenny B. Goode"/>
+          <input
+            type="text"
+            name="name"
+            id="name"
+            placeholder="Jenny B. Goode"
+          />
           <label for="email">Your Email</label>
-          <input type="email" name="email" id="email" placeholder="Jenny@BGoode.com" />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Jenny@BGoode.com"
+          />
           <label for="">Reservation Time</label>
           <input
             type="datetime-local"
